--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="The website named College Grahisthi was created specifically to assist students in finding housing, roommates, food, a gym, a housekeeper, and anything else they may require with only a few clicks." />
   <meta name="theme-color" content="#003f91" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
